<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/render_effect_test_image"
        android:src="@drawable/test_image"
        app:layout_constraintBottom_toTopOf="@+id/offsetXSlider" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/labelsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:barrierMargin="8dp"
        app:constraint_referenced_ids="offsetXLabel,offsetYLabel" />

    <TextView
        android:id="@+id/offsetXLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_label"
        app:layout_constraintBottom_toBottomOf="@+id/offsetXSlider"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/offsetXSlider" />

    <com.google.android.material.slider.Slider
        android:id="@+id/offsetXSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        app:layout_constraintBottom_toTopOf="@+id/offsetYSlider"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/labelsBarrier" />

    <TextView
        android:id="@+id/offsetYLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/y_label"
        app:layout_constraintBottom_toBottomOf="@+id/offsetYSlider"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toTopOf="@+id/offsetYSlider" />

    <com.google.android.material.slider.Slider
        android:id="@+id/offsetYSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:valueFrom="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/labelsBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>